--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
     "aylien_textapi": "^0.7.0",
     "babel-jest": "^26.0.1",
     "dotenv": "^8.2.0",
@@ -37,13 +38,14 @@
     "style-loader": "^1.2.1",
     "webpack-dev-server": "^3.7.2"
   },
-  
-    "jest": {
-      "moduleFileExtensions": ["js"],
-      "moduleDirectories": ["node_modules", "src", "dist"]
-
-    }
-  
+  "jest": {
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src",
+      "dist"
+    ]
+  }
 }
-
-
